# CSVReader

./: CMakeLists.txt  README.md  main.cpp
src/: CSVReader.cpp  CSVReader.h  ErrorCheckers.cpp  ErrorCheckers.h  Tests.cpp  main.cpp
tests/: -1r.csv  1col.csv  divisionzero.csv  duplicateC.csv  duplicateR.csv  emptycell.csv  negativerow.csv  nocols.csv  onerow.csv  onlyIds.csv  valid1.csv  valid2.csv  wcol.csv  wrongcell.csv  wrongcell2.csv  wrongcell3.csv  wrongcell4.csv  wrongrow.csv
